--- a/DAY_02/CLASS/04_OPEN-IMAGES-OPENCV.ipynb
+++ b/DAY_02/CLASS/04_OPEN-IMAGES-OPENCV.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread('/Users/aldo/Desktop/mact/urban-panopticon/data/puppy.jpg')"
+    "img = cv2.imread('data/puppy.jpg')"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_gray = cv2.imread('/Users/aldo/Desktop/mact/urban-panopticon/data/puppy.jpg',cv2.IMREAD_GRAYSCALE)"
+    "img_gray = cv2.imread('data/puppy.jpg',cv2.IMREAD_GRAYSCALE)"
    ]
   },
   {
@@ -487,7 +487,7 @@
    "outputs": [],
    "source": [
     "# NORMAL PROCEDURE \n",
-    "img = cv2.imread('/Users/aldo/Desktop/mact/urban-panopticon/data/puppy.jpg')\n",
+    "img = cv2.imread('data/puppy.jpg')\n",
     "cv2.imshow('Puppy', img)\n",
     "cv2.waitKey(0)"
    ]
