--- a/DAY_02/CLASS/06_COLOR MAPPING.ipynb
+++ b/DAY_02/CLASS/06_COLOR MAPPING.ipynb
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "img = cv2.imread('/Users/aldo/Desktop/mact/urban-panopticon/data/puppy.jpg')\n",
+    "img = cv2.imread('data/puppy.jpg')\n",
     "img  = cv2.cvtColor(img,cv2.COLOR_BGR2RGB)\n",
     "plt.imshow(img)"
    ]
