--- a/DAY_04/CLASS/21_YOLO_OBJECT_DETECTION.ipynb
+++ b/DAY_04/CLASS/21_YOLO_OBJECT_DETECTION.ipynb
@@ -61,7 +61,7 @@
    ],
    "source": [
     "# Loading image\n",
-    "img_org = cv2.imread(\"data/city.jpg\")\n",
+    "img_org = cv2.imread(\"test-street-marked-01.jpg\")\n",
     "img_org = imutils.resize(img_org, width=800)\n",
     "\n",
     "img = copy.deepcopy(img_org)\n",
